


  This is list of recent PETSc changes before they are 
transported into the docs/changes.html file. (Because it
is a pain to always check that file out of SourceSafe to 
add to it).

  VEC


  MAT
  

  KSP


  SLES
 

  PC

  
 
  AO

    

  IS

  

  Draw
  

  General

  added int PetscShowMemoryUsage(Viewer viewer,char *message)

  added PreLoadBegin(), PreLoadStage() and PreLoadEnd() to simplify getting
  accurate timings by peloading. See src/snes/examples/tutorials/ex10.c

  Viewers


 
  SNES 

  The second argument to MatSNESMFSetType() is now a MatSNESMFType, rather than
 a char*. This should not affect any user code. Current built in choices are
 MATSNESMF_DEFAULT "default" and MATSNESMF_WP "wp"

  DA

    

  TS

   
