@@ -1,31 +1,23 @@
-/*$Id: ex1.c,v 1.20 2000/04/09 03:09:21 bsmith Exp $*/
+/*$Id: ex15.c,v 1.1 2000/04/20 04:08:41 bsmith Exp bsmith $*/
 
 /* 
-   Demonstrates PETSc error handlers.
+   Demonstrates PetscPopUpSelect()
  */
 
 #include "petsc.h"
 
-#undef __FUNC__
-#define __FUNC__ "CreateError"
-int CreateError(int n)
-{
-  int ierr;
-  if (!n) SETERRQ(1,0,"Error Created");
-  ierr = CreateError(n-1);CHKERRQ(ierr);
-  return 0;
-}
 
 #undef __FUNC__
 #define __FUNC__ "main"
 int main(int argc,char **argv)
 {
-  int ierr;
+  int  ierr,choice;
+  char *choices[] = {"Say hello","Say goodbye"};
+
   PetscInitialize(&argc,&argv,(char *)0,0);
-  ierr = PetscFPrintf(PETSC_COMM_WORLD,stdout,"Demonstrates PETSc Error Handlers\n");CHKERRQ(ierr);
-  ierr = PetscFPrintf(PETSC_COMM_WORLD,stdout,"The error is a contrived error to test error handling\n");CHKERRQ(ierr);
+  ierr = PetscPopUpSelect(PETSC_COMM_WORLD,PETSC_NULL,"Select one of ",2,choices,&choice);CHKERRQ(ierr);
+  ierr = PetscSynchronizedPrintf(PETSC_COMM_WORLD,"You selected %s\n",choices[choice]);CHKERRQ(ierr);
   ierr = PetscSynchronizedFlush(PETSC_COMM_WORLD);CHKERRQ(ierr);
-  ierr = CreateError(5);CHKERRQ(ierr);
   PetscFinalize();
   return 0;
 }
